NetBSD Problem Report #53930

From sc.dying@gmail.com  Fri Feb  1 09:17:31 2019
Return-Path: <sc.dying@gmail.com>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 55FDB7A1AC
	for <gnats-bugs@gnats.NetBSD.org>; Fri,  1 Feb 2019 09:17:31 +0000 (UTC)
Message-Id: <CA+16TwJqWphhzf5quzwK=nKE7qxBUiBP5ht+6o95nhPcrFiU0w@mail.gmail.com>
Date: Fri, 1 Feb 2019 09:17:15 +0000
From: sc dying <sc.dying@gmail.com>
Reply-To:
To: gnats-bugs@netbsd.org
Subject: usmsc: detachcv is not initialized

>Number:         53930
>Category:       kern
>Synopsis:       usmsc: detachcv is not initialized
>Confidential:   no
>Severity:       serious
>Priority:       high
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Feb 01 09:20:00 +0000 2019
>Closed-Date:    Sun Feb 03 05:07:27 +0000 2019
>Last-Modified:  Sun Feb 03 05:07:27 +0000 2019
>Originator:     sc dying <sc.dying@gmail.com>
>Release:        NetBSD 8.99.32
>Organization:
>Environment:
System: NetBSD 8.99.32 evbarm earmv7hf
Architecture: earmv7hf
Machine: evbarm
>Description:
sc->sc_detachcv of usmsc(4) is not initialized.

>How-To-Repeat:
`drvctl -d usmsc0' panics my RPI definitely.

>Fix:
Please cv_init sc->sc_detachcv in smsc_attach.

>Release-Note:

>Audit-Trail:
From: "David A. Holland" <dholland@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/53930 CVS commit: src/sys/dev/usb
Date: Sat, 2 Feb 2019 19:02:59 +0000

 Module Name:	src
 Committed By:	dholland
 Date:		Sat Feb  2 19:02:59 UTC 2019

 Modified Files:
 	src/sys/dev/usb: if_smsc.c

 Log Message:
 PR kern/53930 from "sc dying": uninitialized condvar in usmsc(4)


 To generate a diff of this commit:
 cvs rdiff -u -r1.41 -r1.42 src/sys/dev/usb/if_smsc.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sat, 02 Feb 2019 19:05:43 +0000
State-Changed-Why:
should be fixed, please test


From: sc dying <sc.dying@gmail.com>
To: gnats-bugs@netbsd.org
Cc: kern-bug-people@netbsd.org, netbsd-bugs@netbsd.org, gnats-admin@netbsd.org, 
	dholland@netbsd.org
Subject: Re: kern/53930 (usmsc: detachcv is not initialized)
Date: Sun, 3 Feb 2019 05:02:29 +0000

 On Sat, Feb 2, 2019 at 7:05 PM <dholland@netbsd.org> wrote:
 >
 > Synopsis: usmsc: detachcv is not initialized
 >
 > State-Changed-From-To: open->feedback
 > State-Changed-By: dholland@NetBSD.org
 > State-Changed-When: Sat, 02 Feb 2019 19:05:43 +0000
 > State-Changed-Why:
 > should be fixed, please test

 It does not panic any more on my Raspberry Pi 3B,
 NetBSD-8.99.33/evbarm earmv7hf.
 Thank you.

State-Changed-From-To: feedback->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sun, 03 Feb 2019 05:07:27 +0000
State-Changed-Why:
confirmed fixed, thanks


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.43 2018/01/16 07:36:43 maya Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2017 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.