PR kern/53930 from "sc dying": uninitialized condvar in usmsc(4)