sys/dev/usb/if_smsc.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: if_smsc.c,v 1.41 2019/01/27 02:08:42 pgoyette Exp $	*/
+/*	$NetBSD: if_smsc.c,v 1.42 2019/02/02 19:02:59 dholland Exp $	*/
 
 /*	$OpenBSD: if_smsc.c,v 1.4 2012/09/27 12:38:11 jsg Exp $	*/
 /*	$FreeBSD: src/sys/dev/usb/net/if_smsc.c,v 1.1 2012/08/15 04:03:55 gonzo Exp $ */
@@ -61,7 +61,7 @@
  */
 
 #include <sys/cdefs.h>
-__KERNEL_RCSID(0, "$NetBSD: if_smsc.c,v 1.41 2019/01/27 02:08:42 pgoyette Exp $");
+__KERNEL_RCSID(0, "$NetBSD: if_smsc.c,v 1.42 2019/02/02 19:02:59 dholland Exp $");
 
 #ifdef _KERNEL_OPT
 #include "opt_usb.h"
@@ -1091,7 +1091,9 @@ smsc_attach(device_t parent, device_t self, void *aux)
 
 	sc->sc_dev = self;
 	sc->sc_udev = dev;
+	sc->sc_dying = false;
 	sc->sc_stopping = false;
+	sc->sc_ttpending = false;
 
 	aprint_naive("\n");
 	aprint_normal("\n");
@@ -1146,6 +1148,7 @@ smsc_attach(device_t parent, device_t self, void *aux)
 	mutex_init(&sc->sc_txlock, MUTEX_DEFAULT, IPL_SOFTUSB);
 	mutex_init(&sc->sc_rxlock, MUTEX_DEFAULT, IPL_SOFTUSB);
 	mutex_init(&sc->sc_mii_lock, MUTEX_DEFAULT, IPL_NONE);
+	cv_init(&sc->sc_detachcv, "smsc_det");
 
 	ifp = &sc->sc_ec.ec_if;
 	ifp->if_softc = sc;
